force-app/main/default/objects/lb2bt__Bundle_Item__c/fields/lb2bt__Bundle_Item__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Bundle_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Item included in Bundle for</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>