force-app/main/default/objects/lb2bt__Bundle_Item__c/fields/lb2bt__Bundle_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Bundle_Parent_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Parent Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Items included in Bundle</relationshipLabel>
    <relationshipName>ItemsIncludedInBundles</relationshipName>
    <type>Lookup</type>
</CustomField>