force-app/main/default/objects/lb2bt__Bundle_Item__c/fields/lb2bt__Name__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Name__c</fullName>
    <formula>lb2bt__Bundle_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>