force-app/main/default/objects/lb2bt__Bundle_Item__c/fields/lb2bt__Quantity__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>