force-app/main/default/objects/lb2bt__Bundle_Item__c/fields/lb2bt__unique_ID_value__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__unique_ID_value__c</fullName>
    <label>unique ID value</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>