force-app/main/default/objects/lb2bt__Bundle_Item__c/validationRules/lb2bt__avoid_items_on_itself.validationRule-meta.xml
<ValidationRule>
    <fullName>lb2bt__avoid_items_on_itself</fullName>
    <active>true</active>
    <errorConditionFormula>lb2bt__Bundle_Item__c =  lb2bt__Bundle_Parent_Item__c</errorConditionFormula>
    <errorMessage>Cannot have the bundle source product as part of its own bundle !!!</errorMessage>
</ValidationRule>