force-app/main/default/objects/lb2bt__Bundle_Item__c/validationRules/lb2bt__Positive_Item_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>lb2bt__Positive_Item_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>lb2bt__Quantity__c &lt; 1</errorConditionFormula>
    <errorMessage>The quantity offered must be greater than zero</errorMessage>
</ValidationRule>